--- a/index.html
+++ b/index.html
@@ -4,86 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Facebook Sederhana</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: Arial, sans-serif;
-    }
-
-    body {
-      background-color: #f0f2f5;
-    }
-
-    header {
-      background-color: #4267B2;
-      color: white;
-      padding: 10px 20px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-
-    .logo {
-      font-size: 24px;
-      font-weight: bold;
-    }
-
-    .search-bar input {
-      padding: 5px 10px;
-      border-radius: 20px;
-      border: none;
-      width: 200px;
-    }
-
-    .profile {
-      font-size: 16px;
-    }
-
-    .container {
-      display: flex;
-      padding: 20px;
-    }
-
-    .sidebar {
-      width: 25%;
-      max-width: 200px;
-      padding: 10px;
-    }
-
-    .sidebar ul {
-      list-style: none;
-    }
-
-    .sidebar li {
-      padding: 10px;
-      background: white;
-      margin-bottom: 10px;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    .feed {
-      flex: 1;
-      padding: 10px;
-    }
-
-    .post {
-      background: white;
-      padding: 15px;
-      border-radius: 10px;
-      margin-bottom: 15px;
-    }
-
-    .post h3 {
-      margin-bottom: 10px;
-    }
-
-    .post p {
-      color: #333;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
